--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
 <body>
+    <h1><a href="https://csslick.github.io/web-study/dist/index.html">Go WEB STUDY</a></h1>
     <div id="app"></div>
 
     <script src="./src/index.js"></script>
