--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Web Study 2019-09-04</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <h1 style="display: flex; justify-content: center;align-items: center;text-align: center;"><a href="https://csslick.github.io/web-study/dist/index.html">Go WEB STUDY</a></h1>
